{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 40,
  "lineage": "df3ef99d-d04a-20de-c0ba-735ca8426f4a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-28T04:14:04.955-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-practice-392512/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/tf-vpc-network",
            "priority": 1000,
            "project": "terraform-practice-392512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tcp-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-28T04:17:47.997-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-practice-392512/global/firewalls/allow-tcp-pub",
            "log_config": [],
            "name": "allow-tcp-pub",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/tf-vpc-network",
            "priority": 1000,
            "project": "terraform-practice-392512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/firewalls/allow-tcp-pub",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pub"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tf-pub-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20230726",
                    "labels": {
                      "instace": "1"
                    },
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/zones/us-central1-b/disks/tf-pub-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-practice-392512/zones/us-central1-b/instances/tf-pub-vm",
            "instance_id": "8803029303026631022",
            "label_fingerprint": "EeqMI8kIKnA=",
            "labels": {
              "env": "pub",
              "instance": "1",
              "owner": "terraform"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "FYAqEuwreps=",
            "name": "tf-pub-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.202.253.33",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/tf-vpc-network",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/us-central1/subnetworks/tf-pub",
                "subnetwork_project": "terraform-practice-392512"
              }
            ],
            "project": "terraform-practice-392512",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/zones/us-central1-b/instances/tf-pub-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "pub"
            ],
            "tags_fingerprint": "3gYBBN2GmPQ=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.pub-sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tf-pvt-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20230726",
                    "labels": {
                      "instace": "1"
                    },
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/zones/us-central1-a/disks/tf-pvt-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-practice-392512/zones/us-central1-a/instances/tf-pvt-vm",
            "instance_id": "3959869282061500783",
            "label_fingerprint": "FCZ_jsXORxE=",
            "labels": {
              "env": "pvt",
              "instance": "1",
              "owner": "terraform"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "FYAqEuwreps=",
            "name": "tf-pvt-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/tf-vpc-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/us-central1/subnetworks/tf-pvt",
                "subnetwork_project": "terraform-practice-392512"
              }
            ],
            "project": "terraform-practice-392512",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/zones/us-central1-a/instances/tf-pvt-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "pvt"
            ],
            "tags_fingerprint": "pDn2YuIxEjc=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.pvt-sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-practice-392512/global/networks/tf-vpc-network",
            "mtu": 1460,
            "name": "tf-vpc-network",
            "project": "terraform-practice-392512",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/tf-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "tf-pvt-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-28T04:30:48.011-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/terraform-practice-392512/regions/us-central1/routers/tf-pvt-router",
            "name": "tf-pvt-router",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/tf-vpc-network",
            "project": "terraform-practice-392512",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/us-central1/routers/tf-pvt-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.pvt-sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "tf-pvt-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "terraform-practice-392512/us-central1/tf-pvt-router/tf-pvt-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "tf-pvt-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "terraform-practice-392512",
            "region": "us-central1",
            "router": "tf-pvt-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.tf-pvt-router",
            "google_compute_subnetwork.pvt-sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-28T04:05:21.061-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/terraform-practice-392512/regions/us-central1/subnetworks/tf-pub",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "tf-pub",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/tf-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-practice-392512",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/us-central1/subnetworks/tf-pub",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "pvt-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-28T04:05:20.450-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-practice-392512/regions/us-central1/subnetworks/tf-pvt",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "tf-pvt",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/tf-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-practice-392512",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/us-central1/subnetworks/tf-pvt",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}